--- a/TradePulse/TradePulse.Server/Pages/_Host.cshtml
+++ b/TradePulse/TradePulse.Server/Pages/_Host.cshtml
@@ -13,12 +13,15 @@
     <base href="/" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+<link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
-
+    <script src="_content/Blazorise/blazorise.js"></script>
+    <script src="_content/Blazorise.Charts/blazorise.charts.js"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
